--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <%= yield %>
+          <% flash.each do |message_type, message| %> <!-- ここから -->
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% end %> <!-- ここまで追加 -->
     </div>
 </body>
 </html>
