master ito method

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <h1>
-  <%= gravatar_for @user %>
-  <%= @user.name %>
+  <%= gravatar_for @user %><br>
+  <%= @user.name %> <br>
+  <%= @user.profile %><br>
 </h1>
