--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome To Microposts! </h1>
-<p>Feel free to add your thoughts !</p>
+<h1>Welcome to Microposts! </h1>
+<div><p>Feel free to tweet your thoughts ! <span class="label label-success"> (・8・)</span></p></div>
