--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
+    <div class="form-group">
     <%= form_for(@user) do |f| %>
  <%= render 'shared/error_messages', object: f.object %>
  
@@ -11,8 +12,11 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
 
+      <%= f.lovel :location %>
+      <%= f.text_field :name, class: 'form-control' %>
+      
       <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+      <%= f.password_field :password, class: 'form-control'  %>
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
