--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,22 @@
-<h1>Welcome to Microposts! </h1>
-<div><p>Feel free to tweet your thoughts ! <span class="label label-success"> (・8・)</span></p></div>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1>Welcome to the Microposts</h1>
+
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
+<% end %>
+
+
+<!--<h1>Welcome to Microposts! </h1>-->
+<!--<div><p>Feel free to tweet your thoughts ! <span class="label label-success"> (・8・)</span></p></div>-->
