--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,7 +12,7 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.lovel :location %>
+      <%= f.lavel :location %>
       <%= f.text_field :name, class: 'form-control' %>
       
       <%= f.label :password %>
