--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,8 +12,8 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.label :location %>
-      <%= f.text_field :name, class: 'form-control' %>
+      <!--<%= f.label :location %>-->
+      <!--<%= f.text_field :name, class: 'form-control' %>-->
       
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control'  %>
