--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,18 +8,19 @@
     </section>
   </aside>
   <div class="col-md-8">
-    <% if @user.microposts.any? %>
-      <h3>Microposts (<%= @user.microposts.count %>)</h3>
-      <ol class="microposts">
-        <!--<#%= render @microposts %>-->
+<%= render 'follow_form' if logged_in? %>
+     <% if @user.microposts.any? %>
+     <h3>Microposts (<%= @user.microposts.count %>)</h3>
+     <ol class="microposts">
+     <%= render @microposts %>
         <!--<#%= render partial: 'microposts/micropost', collection: @microposts %>-->
-        <% @microposts.each do |micropost| %>
-        <%= render partial: 'microposts/micropost', locals: { micropost: micropost } %>
-        <% end %>
+<!--        <#% @microposts.each do |micropost| %>-->
+<!--        <#%= render partial: 'microposts/micropost', locals: { micropost: micropost } %>-->
+<!--        <#% end %>-->
       </ol>
-    <% end %>
-  </div>
-</div>
+      <% end %>
+      </div>
+      </div>
 
 <!--<h1>-->
 <!--  <#%= gravatar_for @user %><br>-->
