--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -4,8 +4,12 @@
   <span class="content"><%= micropost.content %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+    
+<button type="button" class="btn btn-xs btn-success">LIKE</button>
+      
     <% if current_user == micropost.user %>
-      <%= link_to "delete", micropost, method: :delete,
+    
+    <%= link_to "delete", micropost, method: :delete,
                                        data: { confirm: "Are you sure?" } %>
     <% end %>
   </span>
