--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
  <%= render 'shared/error_messages', object: f.object %>
- 
+    
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
 
@@ -22,6 +22,10 @@
       
       <%= f.label :profile %>
       <%= f.text_area :profile, class: 'form-control', placeholder: '15文字以上145文字以下の入力が可能です' %>
+      
+      <!--<%#= form.file_field :avatars, multiple: true %>-->
+      <%= f.label :avatar %>      
+      <%= f.file_field :avatar %> 
       
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
