--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,12 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %>
+        <!--<#%= gravatar_for @user %>-->
+        <%= image_tag @user.avatar.url, size: 50 %>
+        <!--<#%= @user.avatar.url %>-->
+        <%= @user.name %><br>
+        <%= @user.profile %><br>
+
       </h1>
     </section>
   </aside>
@@ -21,6 +25,9 @@
       <% end %>
 <%= link_to 'Followings', followings_user_path(@user) %>
 <%= link_to 'Followers', followers_user_path(@user) %>
+
+
+
       </div>
       </div>
 
@@ -30,4 +37,3 @@
 <!--  <#%= @user.location %><br>-->
 <!--  <#%= @user.profile %><br>-->
 <!--</h1>-->
-
